--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -7,5 +7,6 @@
 @import "./components/collapse.scss";
 @import "./components/caroussel.scss";
 @import "./components/tag.scss";
+@import "./components/star.scss";
 @import "./pages/error.scss";
 @import "./components/logement_description.scss";
