--- a/src/styles/_settings.scss
+++ b/src/styles/_settings.scss
@@ -1,38 +1,38 @@
 @import "./responsive.scss";
 
-%primary-color{
-    color: #FF6060;
+%primary-color {
+	color: #ff6060;
 }
 
-%style{
-    background-color: #FF6060;
-    color: white;
+%style {
+	background-color: #ff6060;
+	color: white;
 }
 
 * {
-    margin: 0;
-    padding: 0;
+	margin: 0;
+	padding: 0;
 }
-html, body {
-    height: 100%;
-  }
+html,
+body {
+	height: 100%;
+}
 
 .content {
-    flex: 1 ;
-    margin: 0 4rem 0 4rem;
+	flex: 1;
+	margin: 0 4rem 0 4rem;
 }
 
-.Layout{
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
+.Layout {
+	flex: 1;
+	display: flex;
+	flex-direction: column;
+	min-height: 100vh;
 }
 
 @media only screen and (max-width: $mobile) {
-    .content {
-        flex: 1 ;
-        margin: 0 2rem 0 2rem;
-    }
+	.content {
+		flex: 1;
+		margin: 0 2rem 0 2rem;
+	}
 }
-  
