--- a/src/styles/components/logement.scss
+++ b/src/styles/components/logement.scss
@@ -1,17 +1,17 @@
-.logements_container{
-    background-color: #F7F7F7;
-    border-radius: 1.5rem;
-    margin-top: 3rem;
-    .logements{
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-between;
-    }
+.logements_container {
+	background-color: #f7f7f7;
+	border-radius: 1.5rem;
+	margin-top: 3rem;
+	.logements {
+		display: flex;
+		flex-wrap: wrap;
+		justify-content: space-between;
+	}
 }
 
 @media only screen and (max-width: $mobile) {
-    .logements_container{
-        background-color: white;
-        margin-top: 1rem;
-    }
+	.logements_container {
+		background-color: white;
+		margin-top: 1rem;
+	}
 }
