--- a/src/styles/components/tag.scss
+++ b/src/styles/components/tag.scss
@@ -1,11 +1,11 @@
-.tags_container{
-    display: flex; 
+.tags_container {
+	display: flex;
 }
 
-.tag{
-    @extend %style;
-    padding: 0.5rem;
-    border-radius: 0.8rem;
-    margin: 2rem 1rem 0rem 0rem;
-
+.tag {
+	@extend %style;
+	padding: 0.5rem;
+	border-radius: 0.8rem;
+	margin: 2rem 1rem 0rem 0rem;
+	font-size: 0.8rem;
 }
