--- a/src/styles/pages/error.scss
+++ b/src/styles/pages/error.scss
@@ -15,3 +15,27 @@
 		font-size: 1.5rem;
 	}
 }
+
+@media only screen and (max-width: $tablette) {
+	.alert-error {
+		margin-top: 3rem;
+		h1 {
+			font-size: 14rem;
+		}
+		p {
+			font-size: 1.3rem;
+		}
+	}
+}
+
+@media only screen and (max-width: $mobile) {
+	.alert-error {
+		margin-top: 3rem;
+		h1 {
+			font-size: 7rem;
+		}
+		p {
+			font-size: 1rem;
+		}
+	}
+}
